--- a/FinaSchoolReact/package.json
+++ b/FinaSchoolReact/package.json
@@ -9,12 +9,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "@mui/x-data-grid": "^5.12.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@mui/x-date-pickers-pro": "^5.0.0-beta.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "material-table": "^2.0.3",
+    "moment": "^2.29.4",
     "primeflex": "^3.1.3",
     "react": "^18.0.0",
     "react-awesome-reveal": "^3.8.1",
