--- a/FinaSchoolReact/package.json
+++ b/FinaSchoolReact/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "material-table": "^2.0.3",
     "moment": "^2.29.4",
+    "notistack": "^2.0.5",
     "primeflex": "^3.1.3",
     "react": "^18.0.0",
     "react-awesome-reveal": "^3.8.1",
