--- a/FinaSchoolReact/package.json
+++ b/FinaSchoolReact/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@inertiajs/inertia-react": "^0.8.1",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
@@ -28,6 +29,7 @@
     "react-reveal": "^1.2.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-router-guards": "^1.0.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
